[project]
name = "gym-activities"
version = "0.1.0"
description = ""
authors = [
    {name = "joshg",email = "joshgood211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[classic-control] (>=1.1.1,<2.0.0)",
    "stable-baselines3 (>=2.6.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "copier (>=9.6.0,<10.0.0)",
    "gym (>=0.26.2,<0.27.0)",
    "ray (==2.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
